--- a/app.css
+++ b/app.css
@@ -128,3 +128,16 @@ body{
     background-color: #269aff; 
     color: white;
 }
+@media (min-width:900px) {
+    .panel{
+        flex-direction: row;
+    }
+    .pricing-plan{
+        border-bottom: none;
+        border-right: 1px solid #e1f1ff;
+        padding: 20px 40px;
+    }
+    .pricing-plan:last-child{
+        border-right: none;
+    }
+}
